<resources>
    <string name="app_name">Unite4_KararVeDongu</string>
    <string name="uyg1">Uygulama-1(100 den Büyükse)</string>
    <string name="uyg2">Uygulama-2(Hangisi Büyük veya Eşitse)</string>
    <string name="uyg3">Uygulama-3()</string>
    <string name="uyg4">Uygulama-4()</string>
    <string name="uyg5">Uygulama-5()</string>
    <string name="uyg6">Uygulama-6()</string>
    <string name="uyg7">Uygulama-7()</string>
    <string name="uyg8">Uygulama-8()</string>
    <string name="uyg9">Uygulama-9()</string>
    <string name="uyg10">Uygulama-10()</string>
</resources>